# PaperRec

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  lib.nix  package-lock.json  pyproject.toml  recommend_cache.json  shell.nix
paperrec/: email.py  find.py  main.py  recommend.py
prisma/: schema.prisma
scripts/: compose.yaml
